--- a/Grid/FlexGridExplorer/FlexGridExplorer/Resources/AppResources.ja.resx
+++ b/Grid/FlexGridExplorer/FlexGridExplorer/Resources/AppResources.ja.resx
@@ -497,10 +497,12 @@
     <comment>Save</comment>
   </data>
   <data name="MouseHoverDescription" xml:space="preserve">
-    <value>Shows the effects of different settings of MouseOverMode</value>
+    <value>MouseOverMode のさまざまな設定の効果を示します。</value>
+    <comment>Shows the effects of different settings of MouseOverMode</comment>
   </data>
   <data name="MouseHoverTitle" xml:space="preserve">
-    <value>Mouse Hover</value>
+    <value>マウスホバー</value>
+    <comment>Mouse Hover</comment>
   </data>
   <data name="ShowSort" xml:space="preserve">
     <value>並べ替えアイコンの表示</value>
