--- a/NET_8/Menu/MenuExplorer/Resources/AppResources.ja.resx
+++ b/NET_8/Menu/MenuExplorer/Resources/AppResources.ja.resx
@@ -160,4 +160,8 @@
   <data name="Title" xml:space="preserve">
     <value>Menuエクスプローラー</value>
   </data>
+  <data name="Theme" xml:space="preserve">
+    <value>テーマ</value>
+    <comment>Theme</comment>
+  </data>
 </root>
