--- a/NET_9/Menu/MenuExplorer/Resources/AppResources.ja.resx
+++ b/NET_9/Menu/MenuExplorer/Resources/AppResources.ja.resx
@@ -158,10 +158,18 @@
     <comment>Custom Context Menu</comment>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Menuエクスプローラー</value>
+    <value>Menu エクスプローラー</value>
   </data>
   <data name="Theme" xml:space="preserve">
     <value>テーマ</value>
     <comment>Theme</comment>
+  </data>
+  <data name="GroupingDesc" xml:space="preserve">
+    <value>メニュー項目間のグループラベルを表示する方法を示します</value>
+    <comment>Shows how to display group labels between menu-items</comment>
+  </data>
+  <data name="GroupingTitle" xml:space="preserve">
+    <value>グループ化</value>
+    <comment>Grouping</comment>
   </data>
 </root>
